feat: support nested categories

--- a/src/components/PostPage.astro
+++ b/src/components/PostPage.astro
@@ -14,7 +14,7 @@ const interval = 50;
                 entry={entry}
                 title={entry.data.title}
                 tags={entry.data.tags}
-                category={entry.data.category}
+                categories={entry.data.categories ?? (entry.data.category ? [entry.data.category] : null)}
                 published={entry.data.published}
                 updated={entry.data.updated}
                 url={getPostUrlBySlug(entry.slug)}
