--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -16,7 +16,7 @@ interface Props {
 	published: Date;
 	updated?: Date;
 	tags: string[];
-	category: string | null;
+	categories?: string[] | null;
 	image: string;
 	description: string;
 	draft: boolean;
@@ -29,7 +29,7 @@ const {
 	published,
 	updated,
 	tags,
-	category,
+	categories = null,
 	image,
 	description,
 	style,
@@ -57,7 +57,7 @@ const { remarkPluginFrontmatter } = await entry.render();
         </a>
 
         <!-- metadata -->
-        <PostMetadata published={published} updated={updated} tags={tags} category={category} hideTagsForMobile={true} hideUpdateDate={true} class="mb-4"></PostMetadata>
+        <PostMetadata published={published} updated={updated} tags={tags} categories={categories} hideTagsForMobile={true} hideUpdateDate={true} class="mb-4"></PostMetadata>
 
         <!-- description -->
         <div class:list={["transition text-75 mb-3.5 pr-4", {"line-clamp-2 md:line-clamp-1": !description}]}>
