--- a/src/components/PostMeta.astro
+++ b/src/components/PostMeta.astro
@@ -10,7 +10,7 @@ interface Props {
 	published: Date;
 	updated?: Date;
 	tags: string[];
-	category: string | null;
+	categories?: string[] | null;
 	hideTagsForMobile?: boolean;
 	hideUpdateDate?: boolean;
 }
@@ -18,7 +18,7 @@ const {
 	published,
 	updated,
 	tags,
-	category,
+	categories = null,
 	hideTagsForMobile = false,
 	hideUpdateDate = false,
 } = Astro.props;
@@ -53,10 +53,11 @@ const className = Astro.props.class;
             <Icon name="material-symbols:book-2-outline-rounded" class="text-xl"></Icon>
         </div>
         <div class="flex flex-row flex-nowrap items-center">
-            <a href={getCategoryUrl(category)} aria-label={`View all posts in the ${category} category`}
+            <a href={getCategoryUrl(categories?.map((c) => c.trim()).join("/"))}
+               aria-label={`View all posts in the ${(categories ?? []).join("/") } category`}
                class="link-lg transition text-50 text-sm font-medium
                             hover:text-[var(--primary)] dark:hover:text-[var(--primary)] whitespace-nowrap">
-                {category || i18n(I18nKey.uncategorized)}
+                {categories && categories.length > 0 ? categories.join(" / ") : i18n(I18nKey.uncategorized)}
             </a>
         </div>
     </div>
